modificando imagen y errores de anneth.html

--- a/Intro-Web/Ejercicio2/anneth.html
+++ b/Intro-Web/Ejercicio2/anneth.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/styles/style.css">
     <title>Sobre mí</title>
 </head>
 <body>
     <h1>Anneth Joseline Tinajero Acevedo</h1>
-    <img src="./assets/img/globos.jpeg" alt="amanecer con globos aerostaticos" width="200px">
+    <img src="./assets/img/cdmx.jpeg" alt="amanecer con globos aerostaticos" width="200px">
     <h2>Mi breve biografía</h2>
     <p>Hola, mi nombre es Anneth Joseline pero prefiero solo Anneth, tengo 21 años y soy de Guanajuato pero
         actualmente vivo en Queretaro. Soy estudiante de ing de software y estoy a punto de terminarla pero
         como me interesa aprender mas e incorporarme en el campo laboral, estoy cursando un bootcamp de Generation.
-        Mis hobbys son: leer, ver series, jugar videojuegos.
+        Mis hobbies son: leer, ver series, jugar videojuegos.
     </p>
     <h2>Mi mayor logro</h2>
     <p>Creo que mi mayor logro es haber ganado un concurso, que de premio fue
-        un viaje, fue una gran experiencia y me siento orgullosa de haberlo ganado
+        un viaje, fue una gran experiencia y me siento orgullosa de haberlo ganado.
     </p>
     <h2>Mis bebidas favoritas</h2>
     <ul>
@@ -78,7 +82,7 @@
         <li>Madeline Miller</li>
         <ul>
             <li>La cancion de aquiles</li>
-            <li>Cice</li>
+            <li>Circe</li>
         </ul>
     </ol>
 
